@@ -1,7 +1,9 @@
 Current
 
+Added: IParameterValidator
 Added: Don't display "Options:" if none were defined.
 Added: Enforce that the type of the main parameter is a List.
+Fixed: Exception when using an @ file with empty lines between options
 Fixed: OOM when parsing certain descriptions with long URL's in them.
 
 1.15
